@@ -24,17 +24,16 @@
 (require 'glep-mode)
 
 (defmacro glep-mode-test-run-with-fixed-time (&rest body)
-  `(cl-letf* ((calendrical '(0 0 0 10 8 2024 nil nil 0))
-	      (fixed-time (condition-case nil
-			      ;; new calling convention since Emacs 27
-			      (encode-time calendrical)
-			    (wrong-number-of-arguments
-			     (apply #'encode-time calendrical))))
-	      (orig-fun (symbol-function 'format-time-string))
-	      ((symbol-function 'format-time-string)
-	       (lambda (fmt-string &optional time zone)
-		 (funcall orig-fun fmt-string (or time fixed-time) zone))))
-     ,@body))
+  (let ((encode-time (if (and (fboundp 'func-arity)
+			      (>= 1 (car (func-arity 'encode-time))))
+			 ;; new calling convention since Emacs 27
+			 '(encode-time) '(apply #'encode-time))))
+    `(cl-letf* ((fixed-time (,@encode-time '(0 0 0 10 8 2024 nil nil 0)))
+		(orig-fun (symbol-function 'format-time-string))
+		((symbol-function 'format-time-string)
+		 (lambda (fmt-string &optional time zone)
+		   (funcall orig-fun fmt-string (or time fixed-time) zone))))
+       ,@body)))
 
 (defvar glep-mode-test-input nil)
 
